# client-roofing

./: .env.backup.20251013_182201  .env.backup_20251007_173012  .env.backup_before_local  .env.bak2  .env.example  .env.production.example  .env.production.template  .gitignore  API_404_ERRORS_ANALYSIS.md  AUTH_BYPASS_SUMMARY.md  BACKEND_500_ERROR_DIAGNOSIS.md  BACKEND_API_CONNECTION_REPORT.md  BACKEND_DEPLOYMENT_GUIDE.md  BACKEND_FIX_ACTION_PLAN.md  BACKEND_STATUS_CONFIRMED.md  BACKEND_URL_MISMATCH_CRITICAL.md  BROWSER_404_EXPLANATION.md  CALLRAIL_INTEGRATION_COMPLETE.md  CALLRAIL_INTEGRATION_COMPLETE_SUMMARY.md  CALLRAIL_INTEGRATION_DEMO.md  CLAUDE.md  COMPREHENSIVE_TESTING_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONNECTION_ERROR_FIXED.md  CORRECT_APP_URL.md  CRITICAL_DATABASE_URL_MISSING.md  CSS_DISPLAY_BUG_FIXED.md  CURRENT_STATUS.md  DASHBOARD_FIXES_COMPLETE.md  DATABASE_CONNECTION_FIX.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_IN_PROGRESS.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_STATUS.md  ENVIRONMENT_CONFIGURATION_COMPLETE.md  ENVIRONMENT_CONFIGURATION_SUMMARY.md  FINAL_DEPLOYMENT_STEPS.md  FIX_STREAMLIT_CLOUD_SECRETS_NOW.md  FORCE_STREAMLIT_CLOUD_UPDATE.md  FRONTEND_ERROR_HANDLING_ADDED.md  (+52 more)
analysis/: Premium_Marketing_Strategy.md  Stealth_Marketing_Gap_Analysis_Report.md  Target_Market_Premier_Clientele_Report.md  premium-market-implementation-guide.md  southeast-michigan-luxury-roofing-market-analysis.md  stealth-marketing-gap-analysis.md
backend/: .env.example  .env.phase4.example  =6.11.0  =9.4.0  API_QUICK_START.md  BACKEND_SETUP_STATUS.md  CHATBOT_DATABASE_INTEGRATION_CODE.md  COMPREHENSIVE_DATABASE_INTEGRATION_REPORT.md  CUSTOMER_MODEL_CONVERSION_SUMMARY.md  DATABASE_CREATION_SUMMARY.md  DATABASE_INTEGRATION_REPORT.md  DATABASE_MIGRATION_SUCCESS.md  DATABASE_SETUP_MANUAL.md  Dockerfile  Dockerfile.ml  IMMEDIATE_FIX_INSTRUCTIONS.md  LEAD_MODEL_CONVERSION_SUMMARY.md  MIGRATION_ROLLBACK_GUIDE.md  ML_API_QUICK_START.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  Procfile  QUICK_START_OPENAI_SERVICES.md  WEEK_10_OPENAI_API_SECURITY_VALIDATION.md  backup_database.sh  check_environment.py  create_database_tables.py  create_tables.sql  create_tables_direct.py  create_tables_local.sql  database_indexes.sql  database_optimizer.py  docker-compose.dev.yml  docker-compose.yml  generate_secrets.py  get_companies.py  inspect_database.py  integration_dashboard.py  main_ml.py  pytest.ini  render.yaml  (+14 more)
docs/: ADVANCED_FEATURES_ROADMAP_2025.md  ANALYTICS_IMPLEMENTATION_SUMMARY.md  APPOINTMENT_SYSTEM_IMPLEMENTATION.md  APPOINTMENT_SYSTEM_SUMMARY.md  CI_RUN_NOTE.md  COMPONENT_LIBRARY.md  COMPREHENSIVE_QA_REPORT.md  DATABASE_OPTIMIZATION_GUIDE.md  ENVIRONMENT_CONFIGURATION_GUIDE.md  ENVIRONMENT_QUICK_REFERENCE.md  FRONTEND_ARCHITECTURE.md  Implementation_Roadmap.md  MONITORING_IMPLEMENTATION_SUMMARY.md  MONITORING_OBSERVABILITY_GUIDE.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3_STREAMLIT_ANALYTICS_PLAN.md  PHASE_4_AGENT_ASSIGNMENTS.md  PHASE_4_EXECUTION_PLAN.md  PHASE_4_N8N_AI_AGENTS_PLAN.md  PHASE_4_QUICK_START.md  PRODUCTION_INFRASTRUCTURE_GUIDE.md  PROJECT_ORGANIZATION.md  QA_IMPLEMENTATION_GUIDE.md  STATE_MANAGEMENT_GUIDE.md  Sales_Conversion_Playbook.md  Stealth_Marketing_Implementation_Guide.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_INFRASTRUCTURE_GUIDE.md  TESTING_RESULTS.md  TESTING_SUMMARY_AND_NEXT_STEPS.md  Website_Conversion_Optimization_Guide.md  appointment_system_analysis.md  appointment_system_implementation_guide.md  objection-handling-quick-reference.md  objection-tracking-template.md  (+4 more)
(+475 files in other folders)
